AC_INIT(src/extract.cpp)
AM_CONFIG_HEADER(src/autoconf.h)

PACKAGE_NAME=radio-free-san-andreas
PACKAGE_VERSION=0.2.4

AM_INIT_AUTOMAKE($PACKAGE_NAME, $PACKAGE_VERSION)

# Check for compiler and preprocessor
AC_PROG_CC
AC_PROG_CXX
AC_PROG_CXXCPP

# Checks for other programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Set language requirements for the tests below.
AC_LANG_CPLUSPLUS
AC_REQUIRE_CPP

# Checks for libraries.
AC_CHECK_LIB([m], [ceil],, AC_MSG_ERROR([[*** libm was not found]]))
AC_CHECK_LIB([crypto], [MD5],, AC_MSG_ERROR([[*** libcrypto was not found]]))
AC_CHECK_LIB([ogg], [ogg_sync_buffer],, AC_MSG_ERROR([[*** libogg was not found]]))
AC_CHECK_LIB([vorbis], [vorbis_comment_init],, AC_MSG_ERROR([[*** libvorbis was not found]]))

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h libintl.h stdint.h stdlib.h string.h unistd.h],, AC_MSG_ERROR([[*** a system header was not found]]))
AC_CHECK_HEADERS([ogg/ogg.h],, AC_MSG_ERROR([[*** libvorbis headers were not found]]))

# Checks for standard functions.
AC_CHECK_FUNCS([memset mkdir strerror posix_fadvise])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_STAT

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
